--- a/css/style.css
+++ b/css/style.css
@@ -2447,20 +2447,20 @@ fieldset:disabled a.btn {
   border-color:#b1305c;
 }
 .btn-primary:focus, .btn-primary.focus {
-  color: #fed13680;
-  background-color: #fec810;
-  border-color: #fec503;
-  box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
+   color:black;
+  background-color:wheat;
+  border-color: rosybrown;
+  box-shadow: 0 0 0 0.2rem rosybrown;
 }
 .btn-primary.disabled, .btn-primary:disabled {
-  color: #fed13680;
-  background-color: #fed136;
-  border-color: #fed136;
+    color:black;
+  background-color:wheat;
+  border-color: rosybrown;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
-  color: #fed13680;
-  background-color: #fec503;
-  border-color: #f3bd01;
+  color:black;
+  background-color: wheat;
+  border-color:rosybrown;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
@@ -2677,28 +2677,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #fed136;
-  border-color: #fed136;
+  color:black;
+  border-color: wheat;
 }
 .btn-outline-primary:hover {
-  color: #fed13680;
-  background-color: #fed136;
-  border-color: #fed136;
+  color:black;
+  background-color:wheat;
+  border-color: rosybrown;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
   box-shadow: 0 0 0 0.2rem rgba(254, 209, 54, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #fed136;
+  color:black;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
-  color: #fed13680;
-  background-color: #fed136;
-  border-color: #fed136;
+    color:black;
+  background-color:wheat;
+  border-color: rosybrown;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(254, 209, 54, 0.5);
+  box-shadow: 0 0 0 0.2rem rosybrown;
 }
 
 .btn-outline-secondary {
@@ -6153,7 +6153,7 @@ button.bg-dark:focus {
 }
 
 .bg-white {
-  background-color: #fed13680 !important;
+  background-color: #212529 !important;
 }
 
 .bg-transparent {
@@ -10048,15 +10048,15 @@ img::-moz-selection {
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #212529;
+  background-color: #6e6b6f;
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 0.75rem;
-  color: #fed13680;
+  color: #212529;
   text-transform: uppercase;
-  background-color: #fed136;
+  background-color: #FFEBEE;
   border: 0;
 }
 #mainNav .navbar-brand {
@@ -10189,7 +10189,7 @@ header.masthead .masthead-heading {
 #portfolio .portfolio-item .portfolio-caption {
   padding: 1.5rem;
   text-align: center;
-  background-color: #fed13680;
+  background-color:#FFEBEE;
 }
 #portfolio .portfolio-item .portfolio-caption .portfolio-caption-heading {
   font-size: 1.5rem;
